<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_cc"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_cc" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/trend"
            android:title="@string/nav_graph" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/nav_news" />
    </group>

    <item
        android:title="@string/nav_support" >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>
