<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".Data"
    tools:layout_gravity="center">

    <Spinner
        android:id="@+id/spinner"
        style="@style/titleText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/buttonColor"
        android:entries="@array/monthsList" />

    <TextView
        android:id="@+id/totalCasesLabel"

        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/totalCases"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberOfCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/numberOfCases"
        android:textColor="@color/whiteColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recoveredLabel"
            style="@style/RecoveredAndDeathLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recoveredLabel" />

        <TextView
            android:id="@+id/deathLabel"
            style="@style/RecoveredAndDeathLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deathsLabel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recoverNumber"
            style="@style/recoveredAndDeathsNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOfCases" />

        <TextView
            android:id="@+id/deathNumber"
            style="@style/recoveredAndDeathsNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOfCases" />
    </LinearLayout>

    <TextView
        android:id="@+id/statisticCategory"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColor"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>